--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+	<meta charset="utf-8">
 	<title>Página de elemplo</title>
 </head>
 <body>
 	<h1>Esta es una pagina web de ejemplo modificable</h1>
-	<p>Tiene informacion que cambiaremos para ver el funcionamiento de Github</p>
+	<h2>Tiene informacion que cambiaremos para ver el funcionamiento de Github</h2>
 </body>
 </html>
